--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,34 @@ img {
     font-family: monospace;
     border-color: rgb(51, 0, 102);
 }
+
+body{
+    margin: 0;
+    
+}
+
+button{
+    display: flex;
+    height: auto;
+    width: auto;
+    padding: 0;
+    border: 5px ;
+    
+
+}
+
+#card_container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 5px;
+}
+
+#bottom-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+
+}
