--- a/styles.css
+++ b/styles.css
@@ -18,13 +18,6 @@ nav {
     color: green;
 }
 
-img {
-    height: auto; 
-    width: auto; 
-    max-width: 250px; 
-    max-height: 72px; 
-    border-radius: 50px; 
-}
 
 .btn {
     border-radius: 20px;
@@ -38,7 +31,7 @@ body{
     
 }
 
-button{
+/* button{
     display: flex;
     height: auto;
     width: auto;
@@ -46,7 +39,7 @@ button{
     border: 5px ;
     
 
-}
+} */
 
 #card_container{
     display: flex;
@@ -84,4 +77,12 @@ button{
 
 .dropzone {
     flex-grow: 1;
+}
+
+.tile-img{
+    border-radius: none;
+}
+
+.card{
+
 }
